--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "park-condominial-challenge",
   "version": "1.0.0",
   "main": "server.ts",
-  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch --env-file=.env src/server.ts",
     "lint": "eslint './src/**/*.ts'",
     "lint:fix": "eslint './src/**/*.ts' --fix",
     "prepare": "husky",
@@ -19,15 +18,22 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
+    "@types/sequelize": "^4.28.20",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "prettier": "3.5.3",
+    "sequelize-cli": "^6.6.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "csv-parser": "^3.2.0",
+    "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   }
 }
