--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
+    "@types/pdf-parse": "^1.1.5",
     "@types/sequelize": "^4.28.20",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
@@ -32,6 +34,8 @@
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
